# safe-faas-poc

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
app/server/: config.json  main.go
app/wasm/: main.c  main.go  main.wasm
cmake/: FindEGo.cmake  FindGo.cmake  FindOpenEnclave.cmake  FindSGX.cmake  FindTinyGo.cmake  FindWABT.cmake  FindWASISDK.cmake
